# GameBreakEmulator

./: CMakeLists.txt  README.md  main.c  opc.py
src/: _notes.h  cartridge.c  cartridge.h  clock.c  clock.h  core.c  core.h  io_ports.c  io_ports.h  io_ram.c  io_ram.h  mapper.c  mapper.h  timer.c  timer.h  types.h  utils.c  utils.h
src/gfx/: sdl.c  sdl.h
src/units/: apu.c  apu.h  bios.c  bios.h  cpu.c  cpu.h  ctrl.c  ctrl.h  dma.c  dma.h  mmu.c  mmu.h  ppu.c  ppu.h  serial.c  serial.h
src/units/mappers/: mapper.c  mapper.h  mbc1.h  mbc2.h  mbc3.h  mbc5.h
